<resources>
    <string name="CronetProviderClassName">com.vk.knet.cornet.KnetCronetProvider</string>
    <string name="ab_title">A/B варианты</string>
    <string name="ab_variants">Список AB-вариантов</string>
    <string name="ab_variants_input_error">Введите значения через запятую</string>
    <string name="ab_variants_list">В качестве заголовка x-o3-ab-variants была установлена строка:\n%s</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_name_non_caps_android">Ozon.ru</string>
    <string name="about_app_short_version_android">Версия %1$s (%2$s)</string>
    <string name="about_button_open_license_android">Лицензионное соглашение</string>
    <string name="about_button_open_personal_data_conditions_android">Условия обработки персональных данных</string>
    <string name="about_company_legal_name_android">ООО «Интернет Решения»</string>
    <string name="about_company_legal_name_by_android">«ОЗОН Маркет Бел»</string>
    <string name="about_copyright_android">© 2010 — %1$tY ООО «Интернет Решения»</string>
    <string name="about_copyright_years_range_android">© 2010 — %1$s</string>
    <string name="about_copyright_years_range_by_android">© 2021 — %1$s</string>
    <string name="about_logo_content_description_android">Иконка OZON</string>
    <string name="about_toolbar_title_android">О приложении</string>
    <string name="abtool_label_android">Аб тесты</string>
    <string name="abuse_report_success">Жалоба отправлена</string>
    <string name="access_control_action_disable">Отключить</string>
    <string name="access_control_action_reset">Сбросить</string>
    <string name="access_control_list_disable_joint_access_message">Список можете редактировать только вы</string>
    <string name="access_control_list_disable_joint_access_title">Отключить совместный режим?</string>
    <string name="access_control_list_pattern_android">«%s»</string>
    <string name="access_control_list_remove_user_message_android" formatted="false">%s больше не сможет редактировать список %s</string>
    <string name="access_control_list_remove_user_title">Удалить пользователя?</string>
    <string name="access_control_list_reset_access_message">Список и его обновления перестанут быть видны другим пользователям по ссылке</string>
    <string name="access_control_list_reset_access_title">Сбросить доступ по ссылке?</string>
    <string name="access_control_wishlist_remove_user_message" formatted="false">%s потеряет доступ к вишлисту %s</string>
    <string name="access_control_wishlist_reset_access_message">Вишлист будет закрыт для всех, с кем вы поделились</string>
    <string name="access_control_wishlist_reset_access_title">Сбросить доступ?</string>
    <string name="account_replenishment_ruble_symbol">₽</string>
    <string name="account_type">ru.ozon.id.authorized.account</string>
    <string name="activation_title_discount_code_empty_android">Необходимо ввести кодовое слово</string>
    <string name="add_ab_variants">Добавить AB-варианты</string>
    <string name="add_consignee_adress">Адрес грузополучателя</string>
    <string name="add_legal_enter_inn">Введите ИНН</string>
    <string name="add_to_cart_error">Не удалось добавить в корзину</string>
    <string name="add_to_cart_with_quantity">%d шт</string>
    <string name="additional_luggage_v2_price">₽</string>
    <string name="address_book_remove_address_alert_message">Вы точно хотите удалить выбранный адрес? Отменить действие будет невозможно</string>
    <string name="address_book_remove_address_alert_title">Удалить адрес?</string>
    <string name="address_book_unavailable_address_alert_title">Адрес недоступен</string>
    <string name="address_charity_change">Адрес и контакты изменены</string>
    <string name="address_edit_map_content_description_back">Назад</string>
    <string name="adult_dialog_request">Этот контент «Для взрослых». Подтвердите, что вы старше 18 лет</string>
    <string name="ai_helper_notification_message_copy">Информация о запросе скопирована в буфер обмена</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="antibot_screen_open_barcode_button">Код для получения</string>
    <string name="app_name">OZON</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_results">Накапливать ответы</string>
    <string name="apply_coupon_success">Купон успешно применен</string>
    <string name="aspect_tiles_not_available">Нет в наличии</string>
    <string name="atoms_atom_header_button_change">Изменить</string>
    <string name="atoms_atom_payment_button_default_text">Оплатить онлайн</string>
    <string name="atoms_timer_until_date">до %s</string>
    <string name="atoms_variants_color_plus_sign">+%d</string>
    <string name="avatar_picker_choose_photo_android">Выбрать фото</string>
    <string name="avatar_picker_remove_photo_android">Удалить фото</string>
    <string name="back_ozon">Ozon</string>
    <string name="bank_user_not_exist">Вы еще не являетесь пользователем банка.</string>
    <string name="barcode_cache_annotation">Штрихкод обновляется ежедневно.\nПроверьте его актуальность, если заказ забирает или возвращает кто-то за вас</string>
    <string name="barcode_cache_package">В пункте выдачи Ozon покажите штрихкод сотруднику или назовите номер. В постамате отсканируйте или введите номер</string>
    <string name="barcode_empty_state_header">Покажите штрихкод сотруднику пункта выдачи или отсканируйте его в постамате</string>
    <string name="barcode_empty_state_teen_mode_header">Это специальный штрихкод для получения товаров из Лайкзона</string>
    <string name="barcode_info_sharing_modal_subtitle">Больше не нужно делать скриншот, чтобы отправить код</string>
    <string name="barcode_info_sharing_modal_title">Делиться кодом стало удобнее</string>
    <string name="barcode_sharing_message">Это штрихкод для получения товаров с Ozon. Он действует один день</string>
    <string name="birthday_dialog_title_android">Дата рождения</string>
    <string name="bot_protection_api_key">16c423d4-e019-477f-840f-1118c525bdec</string>
    <string name="bottom_border_behavior">ru.ozon.composer.ui.behavior.BottomBorderViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browser_choser_title_implict_chooser">Выберите приложение</string>
    <string name="button_add">Добавить</string>
    <string name="common_adult_cancel">Отменить</string>
    <string name="common_button_cancel">Отмена</string>
    <string name="common_menu_cart">Корзина</string>
    <string name="common_menu_catalog">Каталог</string>
    <string name="common_menu_favorites">Избранное</string>
    <string name="common_menu_profile">Профиль</string>
    <string name="fintech_testing_features_v2_current_state">Текущее состояние ob-testing-features-v2:</string>
    <string name="fintech_testing_features_v2_current_state_default">не перезаписывается</string>
    <string name="fintech_testing_features_v2_description">При использовании этого механизма все фичи фронта будут активными. Для того, чтобы выключить или поменять значение фичи, необходимо добавить фичу в поля ниже</string>
    <string name="fintech_testing_features_v2_disable_features_hint">feature1,feature2</string>
    <string name="fintech_testing_features_v2_disable_features_title">Список фич для отключения</string>
    <string name="fintech_testing_features_v2_disable_switches_hint">switch1,switch2</string>
    <string name="fintech_testing_features_v2_disable_switches_title">Список realtime switches для отключения</string>
    <string name="fintech_testing_features_v2_edit_features_hint">{\"feature1\":true,\"feature2\":[\"value\"]}</string>
    <string name="fintech_testing_features_v2_edit_features_title">Список фичей для изменения значения</string>
    <string name="gender_dialog_female_android">Женский</string>
    <string name="gender_dialog_male_android">Мужской</string>
    <string name="gender_dialog_title_android">Выберите пол</string>
    <string name="hint_variants_through_commas">AB-варианты через запятую</string>
    <string name="ozon_bottom_sheet_behavior">ru.ozon.app.android.uikit.view.behavior.OzonBottomSheetBehavior</string>
    <string name="ozon_logger_android_debug_clear_button">Очистить</string>
    <string name="ozon_logger_android_debug_create_button">Создать тестовый лог</string>
    <string name="ozon_logger_android_debug_har_enable_title">Включение</string>
    <string name="ozon_logger_android_debug_har_error">Инструмент для сбора HAR логов не подключен</string>
    <string name="ozon_logger_android_debug_har_header">HAR Logs</string>
    <string name="ozon_logger_android_debug_history_button">Открыть историю логов</string>
    <string name="ozon_logger_android_debug_local_logs_description">При включении все новые тестовые логи будут локальными и не отправятся на сервер</string>
    <string name="ozon_logger_android_debug_local_logs_title">Локальные записи</string>
    <string name="ozon_logger_android_debug_logger_header">Logger</string>
    <string name="ozon_logger_android_debug_nav_bar_title">Ozon Logger Debug</string>
    <string name="ozon_logger_android_debug_share_button">Поделиться</string>
    <string name="scan_it_menu_item_flash_android">Вспышка</string>
    <string name="scan_it_menu_item_info_android">Про SCAN IT!</string>
    <string name="scan_it_menu_item_sound_android">Звук сканирования</string>
    <string name="tabs_menu_bank">Банк</string>
    <string name="tabs_menu_main">Главная</string>
    <string name="tabs_menu_support">Поддержка</string>
    <string name="travel_common_chat_android">Чат</string>
    <string name="travel_common_name">Travel</string>
    <string name="travel_common_tickets_android">Билеты</string>
</resources>