<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_m_tab_back"
        android:id="@+id/menu_back_ozon"
        android:title="@string/back_ozon"/>
    <item
        android:icon="@drawable/ic_m_plane"
        android:id="@+id/menu_travel"
        android:title="@string/travel_common_name"/>
    <item
        android:icon="@drawable/ic_m_ticket"
        android:id="@+id/menu_tickets"
        android:title="@string/travel_common_tickets_android"/>
    <item
        android:icon="@drawable/ic_m_dialog"
        android:id="@+id/menu_chat"
        android:title="@string/travel_common_chat_android"/>
    <item
        android:icon="@drawable/ic_m_tabbar_chat"
        android:id="@+id/menu_travel_support"
        android:title="@string/tabs_menu_support"/>
</menu>
