<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_volume_on"
        android:id="@+id/menu_volume_on"
        android:title="@string/scan_it_menu_item_sound_android"
        android:checkable="true"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_flash_off"
        android:id="@+id/menu_flash"
        android:title="@string/scan_it_menu_item_flash_android"
        android:checkable="true"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_info_blue"
        android:id="@+id/menu_scan_it_info"
        android:title="@string/scan_it_menu_item_info_android"
        app:showAsAction="ifRoom"/>
</menu>
