<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/oz_semantic_bg_secondary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/ozon_bottom_sheet_behavior">
    <TextView
        android:textAppearance="@style/TextStyle.Body.L"
        android:id="@+id/genderTitleTv"
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_dialog_title_android"/>
    <View
        android:background="?attr/oz_semantic_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textAppearance="@style/TextStyle.Body.L"
        android:textColor="@color/oz_semantic_accent_primary"
        android:id="@+id/genderFemaleTv"
        android:background="@drawable/selector_standard"
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_dialog_female_android"/>
    <View
        android:background="?attr/oz_semantic_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textAppearance="@style/TextStyle.Body.L"
        android:textColor="@color/oz_semantic_accent_primary"
        android:id="@+id/genderMaleTv"
        android:background="@drawable/selector_standard"
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_dialog_male_android"/>
    <View
        android:background="?attr/oz_semantic_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textAppearance="@style/TextStyle.Body.L"
        android:textColor="@color/oz_semantic_accent_alert"
        android:id="@+id/cancelTv"
        android:background="@drawable/selector_standard"
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_adult_cancel"/>
</LinearLayout>
