<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ru.ozon.fintech.ui.toolbar.FinToolbarView
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MyApp.ToolBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/divider_toolbar"
                style="@style/FeaturesV2Divider"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/testing_features_v2_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_description"
                style="@style/FeaturesV2TextView"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/testing_features_v2_current_state_title"
                android:paddingTop="2dp"
                android:paddingBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_current_state"
                style="@style/FeaturesV2TextView"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/testing_features_v2_current_state"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_current_state_default"
                style="@style/FeaturesV2TextView"/>
            <View
                android:id="@+id/divider_description"
                style="@style/FeaturesV2Divider"/>
            <TextView
                android:textColor="@color/oz_black"
                android:id="@+id/fintech_testing_features_v2_disable_features_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_disable_features_title"
                style="@style/FeaturesV2TextView"/>
            <EditText
                android:id="@+id/fintech_testing_features_v2_disable_features_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fintech_testing_features_v2_disable_features_hint"
                style="@style/FeaturesV2EditText"/>
            <View
                android:id="@+id/divider_disable_features"
                android:layout_marginTop="16dp"
                style="@style/FeaturesV2Divider"/>
            <TextView
                android:id="@+id/fintech_testing_features_v2_disable_switches_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_disable_switches_title"
                style="@style/FeaturesV2TextView"/>
            <EditText
                android:id="@+id/fintech_testing_features_v2_disable_switches_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fintech_testing_features_v2_disable_switches_hint"
                style="@style/FeaturesV2EditText"/>
            <View
                android:id="@+id/divider_disable_switches"
                android:layout_marginTop="16dp"
                style="@style/FeaturesV2Divider"/>
            <TextView
                android:id="@+id/fintech_testing_features_v2_edit_features_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fintech_testing_features_v2_edit_features_title"
                style="@style/FeaturesV2TextView"/>
            <EditText
                android:id="@+id/fintech_testing_features_v2_edit_features_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fintech_testing_features_v2_edit_features_hint"
                style="@style/FeaturesV2EditText"/>
            <View
                android:id="@+id/divider_edit_features"
                android:layout_marginTop="16dp"
                style="@style/FeaturesV2Divider"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
