<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/ozon_logger_android_layerFloor0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:background="@drawable/ozon_logger_android_top_bar_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">
        <FrameLayout
            android:id="@+id/backButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="4dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ozon_logger_android_ic_m_disclosure_back_filled"/>
        </FrameLayout>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ozon_logger_android_debug_nav_bar_title"
            style="@style/ozon_logger_android_DebugMenuTextStyle.NavBar"/>
    </FrameLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="8dp"
                style="@style/ozon_logger_android_DebugMenuCardStyle">
                <TextView
                    android:text="@string/ozon_logger_android_debug_logger_header"
                    style="@style/ozon_logger_android_DebugMenuTextStyle.Header"/>
                <LinearLayout
                    android:id="@+id/showLogsButton"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    style="@style/ozon_logger_android_DebugMenuCellStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ozon_logger_android_debug_history_button"
                        android:layout_weight="1"
                        style="@style/ozon_logger_android_DebugMenuTextStyle.Title"/>
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ozon_logger_android_ic_m_chevron_right"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
                <View style="@style/ozon_logger_android_DebugMenuDividerStyle"/>
                <LinearLayout style="@style/ozon_logger_android_DebugMenuCellStyle">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ozon_logger_android_debug_local_logs_title"
                            style="@style/ozon_logger_android_DebugMenuTextStyle.Title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/ozon_logger_android_debug_local_logs_description"
                            style="@style/ozon_logger_android_DebugMenuTextStyle.Description"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/localLogsSwitch"
                        style="@style/ozon_logger_android_DebugMenuSwitchStyle"/>
                </LinearLayout>
                <View style="@style/ozon_logger_android_DebugMenuDividerStyle"/>
                <Button
                    android:id="@+id/createLogButton"
                    android:layout_marginTop="8dp"
                    android:text="@string/ozon_logger_android_debug_create_button"
                    style="@style/ozon_logger_android_DebugMenuButtonStyle"/>
                <Button
                    android:id="@+id/shareLogsButton"
                    android:layout_marginTop="8dp"
                    android:text="@string/ozon_logger_android_debug_share_button"
                    style="@style/ozon_logger_android_DebugMenuButtonStyle"/>
                <Button
                    android:id="@+id/clearLogsButton"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ozon_logger_android_debug_clear_button"
                    style="@style/ozon_logger_android_DebugMenuButtonStyle"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/harLogsGroup"
                android:layout_marginVertical="8dp"
                style="@style/ozon_logger_android_DebugMenuCardStyle">
                <TextView
                    android:text="@string/ozon_logger_android_debug_har_header"
                    style="@style/ozon_logger_android_DebugMenuTextStyle.Header"/>
                <LinearLayout style="@style/ozon_logger_android_DebugMenuCellStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ozon_logger_android_debug_har_enable_title"
                        android:layout_weight="1"
                        style="@style/ozon_logger_android_DebugMenuTextStyle.Title"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/harLogsSwitch"
                        style="@style/ozon_logger_android_DebugMenuSwitchStyle"/>
                </LinearLayout>
                <View style="@style/ozon_logger_android_DebugMenuDividerStyle"/>
                <Button
                    android:id="@+id/shareHarLogsButton"
                    android:layout_marginTop="8dp"
                    android:text="@string/ozon_logger_android_debug_share_button"
                    style="@style/ozon_logger_android_DebugMenuButtonStyle"/>
                <Button
                    android:id="@+id/clearHarLogsButton"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ozon_logger_android_debug_clear_button"
                    style="@style/ozon_logger_android_DebugMenuButtonStyle"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/ozon_logger_android_textNegative"
                android:gravity="center"
                android:id="@+id/harLogsError"
                android:background="@drawable/ozon_logger_android_card_shape"
                android:padding="16dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ozon_logger_android_debug_har_error"
                android:backgroundTint="@color/ozon_logger_android_bgNegativeSecondaryTransparent"
                android:layout_marginVertical="8dp"
                style="@style/ozon_logger_android_DebugMenuTextStyle.Title"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
