<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/addVariantsContainer"
    android:background="@drawable/bg_round_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/ab_black_900"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ab_variants"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/bg_variants_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/ab_black_900"
            android:textColorHint="@color/ab_black_700"
            android:id="@+id/variantsEditText"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_variants_through_commas"
            android:includeFontPadding="false"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:paddingVertical="4dp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/clearInputImageButton"
            android:background="@drawable/bg_close_button"
            android:padding="3dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_delete"
            android:scaleType="centerInside"
            android:tint="@android:color/white"/>
    </LinearLayout>
    <TextView
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/errorTextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ab_variants_input_error"/>
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/addVariantsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_add"
        android:textAllCaps="false"
        android:backgroundTint="@color/ab_blue_200"/>
</LinearLayout>
